--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <groupId>org.example</groupId>
     <artifactId>Currency_Exchange</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
@@ -17,7 +18,7 @@
             </plugin>
         </plugins>
     </build>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
